@@ -2,6 +2,7 @@ Version 0.9.0alpha6 - 2007-03-XX
  * Bug Fixes:
    * Artist names from ARs should be translated, too.
    * Freeze after answering no to "download the new version" prompt. (#2542)
+   * %musicbrainz_albumid% not working in file renaming. (#2543)  
  * Internals:
    * The browser integration HTTP server rewritten using QTcpServer.
 
